adding recipe to existing environment
